<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:id="@+id/home_drawer"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title_profile"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="top"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:text="Nom"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/profile_name"
            android:autoSizeTextType="uniform"
            android:gravity="center"/>
        <EditText
            android:id="@+id/field_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/profile_email"
            android:autoSizeTextType="uniform"
            android:gravity="center"/>
        <EditText
            android:id="@+id/field_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/profile_pass"
            android:autoSizeTextType="uniform"
            android:gravity="center"/>
        <EditText
            android:id="@+id/field_pass"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="Entrez votre mot de passe"
            android:inputType="textPassword"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/validate_btn"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:onClick="onClickUpdateButton"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/delete_btn"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:onClick="onClickDeleteButton"/>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        app:itemTextColor="@color/colorSecondary"
        android:outlineAmbientShadowColor="@color/colorAccent"
        app:menu="@menu/menu_drawer_profil"
        />


</androidx.drawerlayout.widget.DrawerLayout>